--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ cache = ["once_cell"]
 
 [dependencies]
 num = { version = "0.4" }
+smallvec = { version = "1.8" }
 once_cell = { version = "1.10", optional = true }
 
 [dev-dependencies]
