--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,15 @@ smallvec = { version = "1.8" }
 
 [dev-dependencies]
 once_cell = "1.11"
-pprof = { version = "0.9", features = ["flamegraph", "criterion"] }
+pprof = { version = "0.9", features = ["flamegraph", "protobuf-codec", "criterion"] }
 criterion = { version = "0.3", features = ["html_reports"] }
 
 [[bench]]
 name = "flamegraph"
+harness = false
+
+[[bench]]
+name = "protobuf"
 harness = false
 
 [[bench]]
