--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gammalg-wasm"
+name = "nbezier-wasm"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,4 +12,4 @@ wasm-bindgen =  { version = "0.2", features = ["serde-serialize"] }
 js-sys = "0.3"
 web-sys = { version = "0.3", features = ["CanvasRenderingContext2d"] }
 nalgebra = "0.31"
-gammalg = { version = "0.1.0", path = ".." }
+nbezier = { version = "0.1.0", path = ".." }
