--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,12 @@ default = []
 
 [dependencies]
 nalgebra = "0.31"
-num = { version = "0.4" }
-smallvec = { version = "1.8" }
 
 [dev-dependencies]
 once_cell = "1.11"
 pprof = { version = "0.9", features = ["flamegraph", "protobuf-codec", "criterion"] }
 criterion = { version = "0.3", features = ["html_reports"] }
+dhat = { version = "0.3" }
 
 [[bench]]
 name = "flamegraph"
